--- a/src/styles.css
+++ b/src/styles.css
@@ -35,7 +35,6 @@ body {
 
 .tkml-cont {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    min-height: 100vh;
     flex-direction: column;
 }
 
@@ -798,7 +797,7 @@ html.dark {
 }
 
 .footer {
-    position: sticky;
+    position: fixed;
     bottom: 0;
     left: 0;
     right: 0;
@@ -1189,13 +1188,12 @@ html.dark {
     flex-shrink: 0;
 }
 
-.pagination-prev {
+.pagination-prev,
+.pagination-next,
+.pagination-page {
     padding-left: 10px;
 }
 
-.pagination-next {
-    padding-right: 10px;
-}
 
 /* Bullet styles */
 .bullet-item {
